--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,8 @@
 body{
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
     transition: background-color 0.3s, color 0.3s;
 }
 .container{
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
     transition: background-color 0.3s, color 0.3s;
-}
-input{
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-bottom: 10px;
-    width: 80%;
-}
-button{
-    padding: 10px 20px;
-    border: none;
-    background-color: #007BFF;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-}
-button:hover{
-    background-color: #0056b3;
-}
-#weatherResult{
-    margin-top: 20px;
-}
-.dark-mode{
-    background-color: #1a202c;
-    color: #a0aec0;
 }
 .theme-toggle{
     display: flex;
@@ -62,7 +25,6 @@ button:hover{
     left: 10px;
     color: #000;
 }
-
 .toggle-dark{
     right: 10px;
     color: #fff;
@@ -77,6 +39,14 @@ button:hover{
     left: 2px;
     transition: left 0.3s;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+body.dark{
+    background-color: #1a202c;
+    color: #a0aec0;
+}
+body.dark .container{
+    background-color: #2d3748;
+    color: #a0aec0;
 }
 body.dark .theme-toggle{
     background-color: #4a5568;
